--- a/maquinaria.html
+++ b/maquinaria.html
@@ -77,7 +77,7 @@
 
     <footer>
       <div class="footer" style="margin-top: 5rem; color: black;">
-        <i><b>GIVER CIFUENTES</b></i>
+        <i><b>GIVER CIFUENTES.</b></i>
       </div>
     </footer>
 
